methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:18: error: not found: value c
    if (isFacingTrail(c)){
                      ^SlugSnail:24: error: not found: value c
      if (isFacingTrail(c)){
                        ^