methods.slug.SlugSnail.scala.code
def isFacingTrail(c:Color):Boolean = {
      
      if (!(isFacingWall())){
        forward()
        if (getGroundColor()==c){
          backward()
          return(true)
        } else{
          backward()
            return(false)
        }
      }
      return(false)
    }

def pas() {
    if (isFacingTrail(c)){
      brushDown()
      forward()
      brushUp()
    }else {
      right()
      if (isFacingTrail(c)){
        brushDown()
        forward()
        brushUp()
      }
      else{
        left()
        left()
        brushDown()
        forward()
        brushUp()
      }
    }
}


def hunt(){
  while(!isOverBaggle()){
    pas()
  }
  pickupBaggle()
}


def hunt(c:Color) {
     // Write your code here
 }